[apex] Improve handling of <clinit> and such...